# deliverybot

./: .pre-commit-config.yaml  Dockerfile  Dockerfile.bot  Dockerfile.server  LICENSE  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: Dockerfile
deliverybot/: config.py
deliverybot/bot/: __init__.py  __main__.py  replies.py  testdb.py
deliverybot/bot/filters/: __init__.py
deliverybot/bot/fsm/: states.py  storage.py
deliverybot/bot/keyboards/: __init__.py  inline.py
deliverybot/bot/middlewares/: __init__.py
deliverybot/bot/routers/: __init__.py  cart_router.py  helpers.py  info_router.py  menu_router.py  order_history_router.py  order_router.py
deliverybot/database/: __init__.py  __main__.py  database.db  helpers.py  test.py
deliverybot/server/: app.py
scripts/: init_database.sh  run_server.sh  start_bot.sh
src/: bot.py  config.py  keyboards.py  middlewares.py  replies.py  router.py
src/bot/: bot.py
src/bot/routers/: __init__.py  info_router.py
src/database/: database.db  database.py
src/deliverybot/: bot.py  fsm.py  menu.py
src/deliverybot/keyboards/: __init__.py  inline.py
src/deliverybot/menu/: __init__.py
src/deliverybot/routers/: info_router.py  order_router.py
src/deliverybot_server/: app.py
stubs/deliverybot/: config.pyi  middlewares.pyi  replies.pyi
stubs/deliverybot/keyboards/: inline.pyi  regular.pyi
stubs/deliverybot/routers/: __init__.pyi  info_router.pyi  order_router.pyi
