[tool.poetry]
name = "deliverybot"
version = "0.1.0"
description = "A bot that enables restaurants to take meal orders over Telegram."
authors = ["Danila Kritsky <danilakritsky@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.bot.dependencies]
pydantic = "^1.10.2"
aiogram = {version = "^3.0.0b4", allow-prereleases = true}
SQLAlchemy = {extras = ["asyncio"], version = "^1.4.41"}
aiosqlite = "^0.17.0"

[tool.poetry.group.server.dependencies]
Flask = "^2.2.2"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
isort = "^5.10.1"
flake8 = "^5.0.4"
mypy = "^0.971"
safety = "^2.1.1"
bandit = "^1.7.4"
pre-commit = "^2.20.0"
python-dotenv = "^0.21.0"

[tool.black]
preview = true
line-length = 79

[tool.mypy]
show_error_codes = true
allow_redefinition = true
ignore_missing_imports = true
disable_error_code = ["union-attr", "return"]

[tool.isort]
profile = "black"
line_length = 79
lines_after_imports = 2

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
